--- a/Code/2016CS10328_2016CS10326/Makefile
+++ b/Code/2016CS10328_2016CS10326/Makefile
@@ -1,2 +1,5 @@
  all: main.cpp Track.cpp Session.cpp Conference.cpp SessionOrganizer.cpp
 	  g++ -o main main.cpp Track.cpp Session.cpp Conference.cpp SessionOrganizer.cpp
+
+debug: main.cpp Track.cpp Session.cpp Conference.cpp SessionOrganizer.cpp
+	  g++ -g -o main main.cpp Track.cpp Session.cpp Conference.cpp SessionOrganizer.cpp
